--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
     <main class="is-home">
         <section class="slider">
-    <div class="slide" style="background-image: url('../img/slider2.jpg');">
+    <div class="slide" style="background-image: url('img/slider2.jpg');">
         <div class="container">
             <div class="slide-wrapper">
                 <h3>Create With Heart</h3>
@@ -101,7 +101,7 @@
             </div>
         </div>
     </div>
-    <div class="slide" style="background-image: url('../img/slider2.jpg');">
+    <div class="slide" style="background-image: url('img/slider2.jpg');">
         <div class="container">
             <div class="slide-wrapper">
                 <h3>Create With Heart</h3>
@@ -115,7 +115,7 @@
             </div>
         </div>
     </div>
-    <div class="slide" style="background-image: url('../img/slider2.jpg');">
+    <div class="slide" style="background-image: url('img/slider2.jpg');">
         <div class="container">
             <div class="slide-wrapper">
                 <h3>Create With Heart</h3>
