--- a/index.html
+++ b/index.html
@@ -65,11 +65,6 @@
                         <li><a href="#">Contact Us</a></li>
                     </ul>
                     <ul class="navbar__panel aling-center">
-                        <li class="header-basket">
-                            <a href="#">
-                                <i class="icon-basket"></i>
-                            </a>
-                        </li>
                         <li class="header-search">
                             <a href="#">
                                 <i class="icon-search"></i>
@@ -87,7 +82,7 @@
 
     <main class="is-home">
         <section class="slider">
-    <div class="slide" style="background-image: url('../img/slider2.jpg');">
+    <div class="slide" style="background-image: url('img/slider2.jpg');">
         <div class="container">
             <div class="slide-wrapper">
                 <h3>Create With Heart</h3>
@@ -101,7 +96,7 @@
             </div>
         </div>
     </div>
-    <div class="slide" style="background-image: url('../img/slider2.jpg');">
+    <div class="slide" style="background-image: url('img/slider2.jpg');">
         <div class="container">
             <div class="slide-wrapper">
                 <h3>Create With Heart</h3>
@@ -115,7 +110,7 @@
             </div>
         </div>
     </div>
-    <div class="slide" style="background-image: url('../img/slider2.jpg');">
+    <div class="slide" style="background-image: url('img/slider2.jpg');">
         <div class="container">
             <div class="slide-wrapper">
                 <h3>Create With Heart</h3>
@@ -554,6 +549,9 @@
     </div>
 </footer>
     <script src="js/libs.min.js"></script>
+<script src="js/jquery.waypoints.min.js"></script>
+<script src="js/jquery.counterup.min.js"></script>
+
 <script src="js/main.js"></script>
 <script>AOS.init();</script>
 </body>
