--- a/projects.html
+++ b/projects.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.min.css">
-    <title>Блог</title>
+    <title>Projects</title>
 </head>
 
 
@@ -84,7 +84,7 @@
     <div class="heading" style="background-image:url('img/inner-banner-background-image.webp');">
     <div class="container">
         <div class="heading-title">
-            <h2 class="title">Блог</h2>
+            <h2 class="title">Projects</h2>
         </div>
         <ul class="breadcrumb">
     <li><a href="#">Home</a></li>
@@ -96,78 +96,92 @@
 
     <div class="container">
         <div class="row">
-            <div class="main-content">
-    <div class="blog-list">
-        <article class="blog-item">
-            <a class="blog-item__category" href="#">Business</a>
-            <a class="blog-item__img" href="#"><img src="img/Blog-Image-004.webp" alt=""></a>
-            <div class="blog-item__content">
-                <h2 class="blog-item__title"><a href="#">5 Points to Consider When Choosing a General Contractor</a></h2>
-                <p class="blog-item__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, q...</p>
-                <div class="blog-item__meta">
-                    <a href="#" class="blog-item__author">JOHNNY DOE</a> - <span class="blog-item__date"> APRIL 1, 2018</span>
+            <div class="main-content-full">
+    <div class="page-projects">
+        <h2 class="projects__title section-title">Featured Projects</h2>
+        <div class="filter">
+            <div class="filter__btn">
+                <button data-group="all">All Groups</button>
+                <button data-group="commercial">Commercial</button>
+                <button data-group="education">Education</button>
+                <button data-group="hospital">Hospital</button>
+                <button data-group="office">Office</button>
+                <button data-group="residential">Residential</button>
+            </div>
+            <div id="grid" class="filter__list-page">
+                <div class="picture-item" data-groups='["all", "commercial"]'>
+                    <div class="img">
+                        <img src="img/Featured-Projects-Image-001.webp" alt="">
+                        
+                        <div class="overlay">
+                            <a href="img/Featured-Projects-Image-001.webp" data-fancybox><i class="icon-zoom-in"></i></a>
+                        </div>
+                    </div>
+                    <div class="data">
+                        <h4 class="location"><a href="#">Residential</a></h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do...</p>
+                    </div>
+                </div>
+                <div class="picture-item" data-groups='["all", "education"]'>
+                    <div class="img"><img src="img/Featured-Projects-Image-001.webp" alt=""></div>
+                    <div class="data">
+                        <h4 class="location"><a href="#">Residential</a></h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do...</p>
+                    </div>
+                </div>
+                <div class="picture-item" data-groups='["all", "commercial"]'>
+                    <div class="img"><img src="img/Featured-Projects-Image-001.webp" alt=""></div>
+                    <div class="data">
+                        <h4 class="location"><a href="#">Residential</a></h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do...</p>
+                    </div>
+                </div>
+                <div class="picture-item" data-groups='["all", "education"]'>
+                    <div class="img"><img src="img/Featured-Projects-Image-001.webp" alt=""></div>
+                    <div class="data">
+                        <h4 class="location"><a href="#">Residential</a></h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do...</p>
+                    </div>
+                </div>
+                <div class="picture-item" data-groups='["all", "hospital"]'>
+                    <div class="img"><img src="img/Featured-Projects-Image-001.webp" alt=""></div>
+                    <div class="data">
+                        <h4 class="location"><a href="#">Residential</a></h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do...</p>
+                    </div>
+                </div>
+                <div class="picture-item" data-groups='["all", "office"]'>
+                    <div class="img"><img src="img/Featured-Projects-Image-001.webp" alt=""></div>
+                    <div class="data">
+                        <h4 class="location"><a href="#">Residential</a></h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do...</p>
+                    </div>
+                </div>
+                <div class="picture-item" data-groups='["all", "residential"]'>
+                    <div class="img"><img src="img/Featured-Projects-Image-001.webp" alt=""></div>
+                    <div class="data">
+                        <h4 class="location"><a href="#">Residential</a></h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do...</p>
+                    </div>
+                </div>
+                <div class="picture-item" data-groups='["all", "office"]'>
+                    <div class="img"><img src="img/Featured-Projects-Image-001.webp" alt=""></div>
+                    <div class="data">
+                        <h4 class="location"><a href="#">Residential</a></h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do...</p>
+                    </div>
+                </div>
+                <div class="picture-item" data-groups='["all", "education"]'>
+                    <div class="img"><img src="img/Featured-Projects-Image-001.webp" alt=""></div>
+                    <div class="data">
+                        <h4 class="location"><a href="#">Residential</a></h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do...</p>
+                    </div>
                 </div>
             </div>
-        </article>
-        <article class="blog-item">
-            <a class="blog-item__category" href="#">Business</a>
-            <a class="blog-item__img" href="#"><img src="img/Blog-Image-004.webp" alt=""></a>
-            <div class="blog-item__content">
-                <h2 class="blog-item__title"><a href="#">5 Points to Consider When Choosing a General Contractor</a></h2>
-                <p class="blog-item__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, q...</p>
-                <div class="blog-item__meta">
-                    <a href="#" class="blog-item__author">JOHNNY DOE</a> - <span class="blog-item__date"> APRIL 1, 2018</span>
-                </div>
-            </div>
-        </article>
-        <article class="blog-item">
-            <a class="blog-item__category" href="#">Business</a>
-            <a class="blog-item__img" href="#"><img src="img/Blog-Image-004.webp" alt=""></a>
-            <div class="blog-item__content">
-                <h2 class="blog-item__title"><a href="#">5 Points to Consider When Choosing a General Contractor</a></h2>
-                <p class="blog-item__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, q...</p>
-                <div class="blog-item__meta">
-                    <a href="#" class="blog-item__author">JOHNNY DOE</a> - <span class="blog-item__date"> APRIL 1, 2018</span>
-                </div>
-            </div>
-        </article>
-        <article class="blog-item">
-            <a class="blog-item__category" href="#">Business</a>
-            <a class="blog-item__img" href="#"><img src="img/Blog-Image-004.webp" alt=""></a>
-            <div class="blog-item__content">
-                <h2 class="blog-item__title"><a href="#">5 Points to Consider When Choosing a General Contractor</a></h2>
-                <p class="blog-item__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, q...</p>
-                <div class="blog-item__meta">
-                    <a href="#" class="blog-item__author">JOHNNY DOE</a> - <span class="blog-item__date"> APRIL 1, 2018</span>
-                </div>
-            </div>
-        </article>
+        </div>
     </div>
 </div>
-
-            <aside class="sidebar">
-    <div class="block">
-    <h2 class="block-title">CATEGORIES</h2>
-    <ul>
-        <li><a href="#">Business</a></li>
-        <li><a href="#">Construction</a></li>
-        <li><a href="#">Design</a></li>
-        <li><a href="#">Interiors</a></li>
-        <li><a href="#">Startups</a></li>
-    </ul>
-</div>
-<ul class="list-services">
-    <li class="active"><a href="#">Architectural Design</a></li>
-    <li><a href="#">General Construction</a></li>
-    <li><a href="#">Building Construction</a></li>
-    <li><a href="#">Interior Design</a></li>
-</ul>
-</aside>
-
         </div>
     </div>
 </main>
