--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.min.css">
-    <title>Services</title>
+    <title>Contact</title>
 </head>
 
 
@@ -84,7 +84,7 @@
     <div class="heading" style="background-image:url('img/inner-banner-background-image.webp');">
     <div class="container">
         <div class="heading-title">
-            <h2 class="title">Services</h2>
+            <h2 class="title">Contact</h2>
         </div>
         <ul class="breadcrumb">
     <li><a href="#">Home</a></li>
@@ -96,76 +96,11 @@
 
     <div class="container">
         <div class="row">
-            <div class="main-content">
-    <div class="services">
-        <div class="services-wrapper">
-            <h1 class="services__title mb-20">Professional Approach To The Project</h1>
-            <div class="services-text-bold mb-20 txt-bold">Consectetur adipisicing elit, sed do eiusmod tempor that an incididunt ut labore et dolore magna aliqua.</div>
-            <div class="services-text mb-20">
-                <p>Lorem ipsum dolor sit amet, consectetuer gravida nibh vel velit auctor aliqunean sollicitudinlorem quis bibendum auci elit consequat ipsutis sem nibh id elit. Lorem ipsum gravida nibh vel velit auctor aliqunean sollicitudinlorem quis bibendum auci elit consequat ipsutis sem nibh id elit.</p>
-            </div>
-            <div class="services-text mb-20">
-                <p>Lorem ipsum dolor sit amet, consectetuer gravida nibh vel velit auctor aliqunean sollicitudinlorem quis bibendum auci elit consequat ipsutis sem nibh id elit. Lorem ipsum gravida nibh vel velit auctor aliqunean sollicitudinlorem quis bibendum auci elit consequat ipsutis sem nibh id elit.</p>
-            </div>
-            <div class="services-row">
-                <div class="services-col">
-                    <div class="services-img"><img src="img/International-Collaboration-Graph.webp" alt=""></div>
-                </div>
-                <div class="services-col">
-                    <ul class="services-text-list">
-                        <li>Integer pharetra molestie velit, non lacinia purus scelerisque sed.</li>
-                        <li>Praesent efficitur felis erat, nec dictum ligula dapibus non. Aliquam luctus, leo eget porttitor rutrum.</li>
-                        <li>Purus ex posuere tortor, vel semper odio felis a orci.</li>
-                        <li>Cras in sapien volutpat, lacinia turpis eget, venenatis libero.</li>
-                        <li>Phasellus congue sit amet nibh non rhoncus. Nam at orci felis. In quis rhoncus ipsum.</li>
-                    </ul>
-                </div>
-            </div>
-            <div class="services-img mb-20">
-                <img src="img/Professional-Approach-To-The-Project-Image.webp" alt="">
-            </div>
-            <div class="services-accordion">
-                <div class="accordion-inner">
-                    <button class="accordion">Integer pharetra molestie velit, vel velit auctor aliqunean sollicit.</button>
-                    <div class="panel">
-                        <p>Lorem ipsum gravida nibh vel velit auctor aliqunean sollicitudinlorem quis bibendum auci elit consequat ipsutis sem nibh id elit. Lorem ipsum dolor sit amet, consectetuer gravida nibh. Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                    </div>
-                </div>
-                <div class="accordion-inner">
-                    <button class="accordion">Section 1</button>
-                    <div class="panel">
-                        <p>Lorem ipsum gravida nibh vel velit auctor aliqunean sollicitudinlorem quis bibendum auci elit consequat ipsutis sem nibh id elit. Lorem ipsum dolor sit amet, consectetuer gravida nibh. Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                    </div>
-                </div>
-                <div class="accordion-inner">
-                    <button class="accordion">Section 1</button>
-                    <div class="panel">
-                        <p>Lorem ipsum gravida nibh vel velit auctor aliqunean sollicitudinlorem quis bibendum auci elit consequat ipsutis sem nibh id elit. Lorem ipsum dolor sit amet, consectetuer gravida nibh. Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
+            <div class="main-content-full">
+    <div class="contact">
+        
     </div>
 </div>
-            <aside class="sidebar">
-    <div class="block">
-    <h2 class="block-title">CATEGORIES</h2>
-    <ul>
-        <li><a href="#">Business</a></li>
-        <li><a href="#">Construction</a></li>
-        <li><a href="#">Design</a></li>
-        <li><a href="#">Interiors</a></li>
-        <li><a href="#">Startups</a></li>
-    </ul>
-</div>
-<ul class="list-services">
-    <li class="active"><a href="#">Architectural Design</a></li>
-    <li><a href="#">General Construction</a></li>
-    <li><a href="#">Building Construction</a></li>
-    <li><a href="#">Interior Design</a></li>
-</ul>
-</aside>
-
         </div>
     </div>
 </main>
