--- a/contact.html
+++ b/contact.html
@@ -98,10 +98,53 @@
         <div class="row">
             <div class="main-content-full">
     <div class="contact">
-        
+        <ul class="contact-list">
+            <li>
+                <i class="icon-phone"></i>
+                <h3>CONTACT DETAILS</h3>
+                <p>Please call or email contact form and we will be happy to assist you.</p>
+                <h4>888-123-4567</h4>
+            </li>
+            <li>
+                <i class="icon-mail"></i>
+                <h3>EMAIL</h3>
+                <p>Please call or email contact form and we will be happy to assist you.</p>
+                <h4>info@example.com</h4>
+            </li>
+            <li>
+                <i class="icon-location"></i>
+                <h3>LOCATION</h3>
+                <p>Please call or email contact form and we will be happy to assist you.</p>
+                <h4>Melbourne, Australia</h4>
+            </li>
+        </ul>
+        <div class="contact-block">
+            <h3>We Love to Hear From You</h3>
+            <span>Please call or email contact form and we will be happy to assist you.</span>
+            <form class="contact-form" action="">
+                <div class="contact-form-input">
+                    <label for="fname"><input name="fname" type="text" placeholder="First Name:"></label>
+                    <label for="lname"><input name="lname" type="text" placeholder="Last Name:"></label>
+                    <label for="mail"><input name="mail" type="email" placeholder="Email Address:"></label>
+                    <label for="phone"><input name="phone" type="tel" placeholder="Phone Number:"></label>
+                    <label for="company"><input name="company" type="text" placeholder="Company Name:"></label>
+                    <label for="subject"><input name="subject" type="text" placeholder="Subject:"></label>
+                </div>
+                <div class="contact-form-textarea">
+                    <label for="message"><textarea name="message" id="" cols="30" rows="10" placeholder="Write your message here..."></textarea></label>
+                </div>
+                <div class="contact-form-btn">
+                    <button class="btn" type="submit">SEND MESSAGE</button>
+                </div>
+            </form>
+        </div>
     </div>
 </div>
         </div>
+    </div>
+
+    <div class="contact-map">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d40666.86530405047!2d30.212154826766294!3d50.42845057789345!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sru!2sua!4v1630932055515!5m2!1sru!2sua" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
     </div>
 </main>
 
