--- a/blog.html
+++ b/blog.html
@@ -47,23 +47,35 @@
                             <img src="img/brixel-logo.webp" alt="">
                         </a>
                     </div>
-                    <ul class="navbar__menu aling-center" id="menu">
-                        <li class="active has-dropdown">
-                            <a href="#">Home <i class="icon-right-open-1"></i></a>
-                            <ul class="sub-menu">
-                                <li><a href="#">Lorem, ipsum.</a></li>
-                                <li><a href="#">Lorem, ipsum.</a></li>
-                                <li><a href="#">Lorem, ipsum.</a></li>
-                                <li><a href="#">Lorem, ipsum.</a></li>
-                            </ul>
-                        </li>
-                        <li><a href="#">About</a></li>
-                        <li><a href="#">Services</a></li>
-                        <li><a href="#">Blog</a></li>
-                        <li><a href="#">Shop</a></li>
-                        <li><a href="#">Elements</a></li>
-                        <li><a href="#">Contact Us</a></li>
-                    </ul>
+
+                    <div class="navbar-menu" id="menu">
+                        <ul class="navbar__menu aling-center">
+                            <li class="active has-dropdown">
+                                <a href="#">Home <i class="icon-right-open-1"></i></a>
+                                <ul class="sub-menu">
+                                    <li><a href="#">Lorem, ipsum.</a></li>
+                                    <li><a href="#">Lorem, ipsum.</a></li>
+                                    <li><a href="#">Lorem, ipsum.</a></li>
+                                    <li><a href="#">Lorem, ipsum.</a></li>
+                                </ul>
+                            </li>
+                            <li><a href="#">About</a></li>
+                            <li><a href="#">Services</a></li>
+                            <li><a href="#">Blog</a></li>
+                            <li><a href="#">Shop</a></li>
+                            <li><a href="#">Elements</a></li>
+                            <li><a href="#">Contact Us</a></li>
+                        </ul>
+
+                        <ul class="header-contact">
+                            <li><i class="icon-phone"></i><span>+38 063 987 65 43</span></li>
+                            <li><i class="icon-mail"></i><span>monolitbud-2001@ukr.net</span></li>
+                        </ul>
+                        <div class="header-lang">
+                            <a href="#">ua</a><a href="#">ru</a>
+                        </div>
+                    </div>
+                    
                     <ul class="navbar__panel aling-center">
                         <li class="header-search">
                             <a href="#">
